fix: Add back column gap to wrapper for mobile layout

--- a/src/main.css
+++ b/src/main.css
@@ -59,6 +59,7 @@
 .wrapper {
   display: grid;
   grid-template-columns: 1fr min(75ch, calc(100% - 48px)) 1fr;
+  column-gap: 24px;
   align-items: center;
 }
 
